=================
Changes for Crate
=================

Unreleased
==========

 - Fix: Updated es/upstream to prevent errors caused by too many cluster
   state updates when dropping tables with a huge amount of partitions

 - Fixed an issue that caused a node stop to always take up at least 10 seconds

 - Further improved bulk partition creation which can occur during ``COPY
   FROM`` or INSERTS with multi-values into partitioned tables

 - Support to register a plugin with different settings to multiple crate
   instances using the same JVM

 - ``COPY FROM``: imports from S3 will now retry the import in case of a read
   timeout.

 - Fix: Removed unnecessary close context calls on CollectContext

 - Select queries will now wait a bit longer before throwing an error in case
   the shards of a table aren't fully active.

 - Fix: In some cases a ``DROP TABLE`` statment does not delete all
   partitions. Now it's possible to repeat the statement in order
   to delete the orphaned partitions.

2015/05/07 0.49.0
=================

 - Fix: performing queries on a partitioned table could cause unnecessary
   ``execution rejected`` errors

 - Add plugin support

 - Removed the limitation that the WHERE clause couldn't contain certain
   expressions in `select count(*)` queries.

 - update crate-admin to 0.12.0 which contains the following changes:

    - display ``rest_url`` from sys.nodes table on node detail view

 - Expose REST URL of node in ``sys.nodes`` table

 - Increased speed and reduced amount of used memory on sorted queries

 - Ordering by `_score` must be defined explictly now even when using a
   `match` predicate.
   Note: This is a backward incompatibility change.

2015/05/07 0.48.4
=================

NOTE: Upgrading from 0.47 or earlier versions requires a full cluster restart

 - Fix: fix update queries on partitioned tables which are partitioned
   by part of the primary key
