@@ -5,6 +5,8 @@ Changes for Crate
 Unreleased
 ==========
 
+ - Fix: Handle concurrently dropped partitions while collecting rows
+
  - Fix: Updated es/upstream to prevent errors caused by too many cluster
    state updates when dropping tables with a huge amount of partitions
 
